--- a/style.css
+++ b/style.css
@@ -1,5 +1,58 @@
+@import 'https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap';
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 :root {
     --primary-color: #647eff;
     --secondary-color: #42d392;
+    --background-color: #8c00ff
 }
 
+header * {
+    text-align: center;
+}
+
+header h1 {
+    font-weight: bold;
+    font-size: 5rem;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    background: var(--background-color);
+    background-size: 200% 200%;
+    animation: background-change 5s linear infinite;
+}
+
+section {
+    padding-bottom: 60vh;
+    margin-bottom: -60vh;
+}
+
+img {
+    user-select: none;
+    pointer-events: none;
+}
+
+.gradient-bg {
+    color: transparent;
+    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+    background-clip: text;
+    font-weight: bolder;
+    filter: drop-shadow(0 0 1px #000);
+}
+
+.blue {
+    background: #0099ff;
+}
+
+.cyan {
+    background: #00cba9;
+}
+
+.yellow {
+    background: #ffd700;
+}
