--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ header h1 {
     filter: drop-shadow(0 0 15px var(--secondary-color));
 }
 
+
 section {
     padding-bottom: 60vh;
     margin-bottom: -60vh;
@@ -123,6 +124,18 @@ footer {
     
 }
 
+section h1 {
+    font-size: 5rem;
+    font-weight: bold;
+    padding-bottom: 3rem;
+    margin-top: -100px;
+}
+
+section h2 {
+    font-size: 2rem;
+    padding-top: 5rem;
+}
+
 .hidden {
     display: none;
 }
@@ -135,11 +148,51 @@ footer a, a:active, a:link, a:visited {
     color: #0099ff;
 }
 
-.carousel {
-    width: 100%;
+.carousel-lock {
+    width: 500px;
+    height: 500px;
+    object-fit: scale-down;
 }
 
+.member-frame {
+    display: inline-block;
+}
 
-.carousel img {
+.member-frame h3 {
+    margin: auto;
+    width: 60%;
+    padding: 20px;
+}
+
+.team-member {
+    padding-left: 50px;
+    padding-right: 50px;
     width: 300px;
+    transition: transform .2s;
+}
+
+.team-member:hover {
+    transition: transform .2s;
+    transform: scale(1.1);
+    filter: drop-shadow(0 0 5px #000);
+}
+
+.team-member:active {
+    transform: scale(1.1) rotate(5deg);
+}
+
+.products {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.card {
+    border-radius: 15px;
+}
+
+@media screen and (max-width: 1500px) {
+    section h1 {
+        margin-top: 0px;
+    }
 }
