--- a/style.css
+++ b/style.css
@@ -41,13 +41,16 @@ header h1 {
     font-size: 6rem;
 }
 
-.logo {
+.logo-padding{
     padding: 50px;
+}
+
+.gradient-shadow {
     transition: filter .3s;
     filter: drop-shadow(0 0 5px var(--secondary-color));
 }
 
-.logo:hover {
+.gradient-shadow:hover {
     transition: filter .3s;
     filter: drop-shadow(0 0 15px var(--secondary-color));
 }
@@ -121,7 +124,7 @@ footer {
     width: 70px;
     height: 70px;
     border: 0;
-    
+
 }
 
 section h1 {
@@ -140,7 +143,10 @@ section h2 {
     display: none;
 }
 
-footer a, a:active, a:link, a:visited {
+footer a,
+a:active,
+a:link,
+a:visited {
     color: white;
 }
 
@@ -218,4 +224,32 @@ footer a, a:active, a:link, a:visited {
     .card {
         margin-bottom: 30px;
     }
+}
+
+/*chi siamo*/
+.chi-siamo-button {
+    font-weight: 700;
+    font-size: 2.5rem;
+    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+    border-radius: 20px;
+    border: 0px;
+    padding: 10px;
+    transition: 250ms;
+}
+
+.chi-siamo-button:hover{
+    font-size: 3rem;
+    transition: 250ms;
+}
+
+.chi-siamo-text{
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+}
+
+.slogan{
+    color: rgb(16, 201, 124);
+    font-weight: 500;
 }
