--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --primary-color: #647eff;
     --secondary-color: #42d392;
     --background-color: #202020;
+    --animation-time: 2s;
 }
 
 body {
@@ -247,6 +248,85 @@ a:visited {
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
+}
+
+.fadein{
+    -webkit-animation: fadein var(--animation-time); /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein var(--animation-time); /* Firefox < 16 */
+        -ms-animation: fadein var(--animation-time); /* Internet Explorer */
+         -o-animation: fadein var(--animation-time); /* Opera < 12.1 */
+            animation: fadein var(--animation-time);
+}
+
+/*fadein*/
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.fadeout{
+
+    -webkit-animation: fadeOut var(--animation-time); /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadeOut var(--animation-time); /* Firefox < 16 */
+        -ms-animation: fadeOut var(--animation-time); /* Internet Explorer */
+         -o-animation: fadeOut var(--animation-time); /* Opera < 12.1 */
+            animation: fadeOut var(--animation-time);
+}
+
+/*fadeout*/
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadeout{
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0; }
 }
 
 .slogan{
