--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ section {
     background: #00cba9;
 }
 
+.green {
+    background: #77dd77;
+}
+
 .pink {
     background: #e7008a;
 }
@@ -228,105 +232,11 @@ a:visited {
 }
 
 /*chi siamo*/
-.chi-siamo-button {
-    font-weight: 700;
-    font-size: 2.5rem;
-    background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-    border-radius: 20px;
-    border: 0px;
-    padding: 10px;
-    transition: 250ms;
-}
-
-.chi-siamo-button:hover{
-    font-size: 3rem;
-    transition: 250ms;
-}
-
 .chi-siamo-text{
-    width: 45%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
     padding: 30px;
-}
-
-.fadein{
-    -webkit-animation: fadein var(--animation-time); /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein var(--animation-time); /* Firefox < 16 */
-        -ms-animation: fadein var(--animation-time); /* Internet Explorer */
-         -o-animation: fadein var(--animation-time); /* Opera < 12.1 */
-            animation: fadein var(--animation-time);
-}
-
-/*fadein*/
-
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-.fadeout{
-
-    -webkit-animation: fadeOut var(--animation-time); /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadeOut var(--animation-time); /* Firefox < 16 */
-        -ms-animation: fadeOut var(--animation-time); /* Internet Explorer */
-         -o-animation: fadeOut var(--animation-time); /* Opera < 12.1 */
-            animation: fadeOut var(--animation-time);
-}
-
-/*fadeout*/
-
-@keyframes fadeout {
-    from { opacity: 1; }
-    to   { opacity: 0; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadeout{
-    from { opacity: 1; }
-    to   { opacity: 0; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadeout {
-    from { opacity: 1; }
-    to   { opacity: 0; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadeout {
-    from { opacity: 1; }
-    to   { opacity: 0; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadeout {
-    from { opacity: 1; }
-    to   { opacity: 0; }
 }
 
 .slogan{
