--- a/style.css
+++ b/style.css
@@ -191,12 +191,13 @@ a:visited {
     transition: transform, 0.2s;
     transform: scale(1.1);
     filter: drop-shadow(0 0 5px #000);
-    transform: rotate(5deg);
-}
-
-.team-member:active {
     transform: scale(1.1) rotate(5deg);
 }
+
+/*
+.team-member:active {
+    transform: scale(1.1) rotate(5deg);
+}*/
 
 .products {
     display: flex;
