--- a/style.css
+++ b/style.css
@@ -184,18 +184,25 @@ a:visited {
     padding-right: 50px;
     width: 300px;
     transition: transform .2s;
-    
 }
 
 .team-member:hover {
-    transition: transform, 0.2s;
-    transform: scale(1.1);
     filter: drop-shadow(0 0 5px #000);
-    transform: scale(1.1);
+    animation: team-member-shake .5s linear infinite;
 }
 
-.team-member:active {
-    transform: scale(1.1) rotate(5deg);
+@keyframes team-member-shake {
+    0% {
+        transform: scale(1.1) rotate(0deg);
+    }
+
+    50% {
+        transform: scale(1.1) rotate(5deg);
+    }
+
+    100% {
+        transform: scale(1.1) rotate(0deg);
+    }
 }
 
 .products {
