--- a/style.css
+++ b/style.css
@@ -272,3 +272,13 @@ a:visited {
 .VIpgJd-ZVi9od-aZ2wEe-wOHMyf{
     display:none;
 }
+
+.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+    display: none;
+}
+
+.goog-te-combo {
+    width: max-content;
+    height: 30px;
+    border-radius: 10px;
+}
